configure authentication and implement Jwt

--- a/TweetBook/appsettings.json
+++ b/TweetBook/appsettings.json
@@ -1,11 +1,14 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-TweetBook-2CAD1A07-D110-4885-96FC-39B42EE599AC;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-UU6UAJD;Database=TweetBookDb;Trusted_Connection=True"
   },
   "SwaggerOptions": {
     "JsonRoute": "swagger/{documentName}/swagger.json",
     "Description": "TweetBook API",
-    "UIEndPoint": "v1/swagger.json" 
+    "UIEndPoint": "v1/swagger.json"
+  },
+  "JwtSettings": {
+    "Secret": "sdiuhiudshfdsfhosf893u48234jhjh09" 
   },
   "Logging": {
     "LogLevel": {
