add jwt refresh token implementation

--- a/TweetBook/appsettings.json
+++ b/TweetBook/appsettings.json
@@ -8,7 +8,8 @@
     "UIEndPoint": "v1/swagger.json"
   },
   "JwtSettings": {
-    "Secret": "sdiuhiudshfdsfhosf893u48234jhjh09" 
+    "Secret": "sdiuhiudshfdsfhosf893u48234jhjh09",
+    "TokenLifetime": "00:00:45" 
   },
   "Logging": {
     "LogLevel": {
