--- a/TweetBook/Properties/launchSettings.json
+++ b/TweetBook/Properties/launchSettings.json
@@ -16,6 +16,14 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger/index.html",
+      "httpPort": 4731,
+      "useSSL": true,
+      "sslPort": 44366
     }
   }
 }
